CHANGES for LIRE
================

2012-12-20
==========
  - Added OpponentHistogram to ImageSearcherFactory and DocumentBuilderFactory.
  - Updated LireDemo to include Joint Histogram and Opponent Histogram.

2012-12-12
==========
  - changed Histogram abstract class member to double[] ... it's much faster
    on 64 bit systems running Java 1.7.
  - Changed  BufferedImage convertImageToGrey(...) to faster version.
  - Change JointHistogram.java to use this method.
  - Cleaned up SimpleColorHistogram a bit.
  - Cleaned up AutoColorCorrelogram a bit.
  - Added OpponentHistogram with JSD as a distance function.
  - Checked for a way to re-implement Metric Spaces approach with Lucene:
    Currently there is no way as the TermPositions object has gone missing.
    Other ideas would be to integrate a new similarity based on footrule
    distance. Or: put it in a simple byte[] based text file ?!?

2012-12-12
==========
  - Made CEDD faster. Packed two bins in one byte and extracted temp variables.
  - Performance updates on GenericFastImageSearcher.
  - Performance updates on GenericDocumentBuilder.
  - Found out that on the 64 bit VM double operations are faster than float ops.

2012-12-12
==========
  - Added joint histogram class and added it to Searcher and Builder factories.
  - Fixed nasty bug in JSD implementation (operator priority in Java!)
  - Made JSD the default distance function in RGB color histogram.

2012-12-10
==========
  - Test for LSH done and reported working.
  - New method in FileUtils to write a PNG from the results.

2012-12-06
==========
  - Made SIFT BoVW work.

2012-11-30
==========
  - Smaller bug fixes for Lucene 4.0 adoption

2012-11-29
==========
  - Adoptions to src tree for Lucene 4.0 (BoVW).
  - Changes in VisualWordsTest to test indexing and search.
  - Changed SURF BoVW weighting scheme to BM-25 as default setting.
  - Found that SIFT doesn't work right now -> TODO!

2012-11-29
==========
  - Adoptions to test src tree for Lucene 4.0